k8s/knot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: knot
  namespace: knot
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: knot
  template:
    metadata:
      labels:
        app: knot
        app.kubernetes.io/name: knot
        app.kubernetes.io/component: server
        app.kubernetes.io/part-of: tangled
    spec:
      containers:
        - name: knot
          image: atcr.io/tangled.org/knot:v1.15.0-alpha
          imagePullPolicy: Always
          ports:
            - containerPort: 5555
              name: http
            - containerPort: 22
              name: ssh
              hostPort: 2222
          securityContext:
            capabilities:
              add:
                - SETUID
                - SETGID
                - CHOWN
          volumeMounts:
            - name: knot-data
              mountPath: /home/git/repositories
              subPath: repositories
            - name: knot-data
              mountPath: /app
              subPath: server
            - name: knot-data
              mountPath: /etc/ssh/keys
              subPath: keys
      volumes:
        - name: knot-data
          persistentVolumeClaim:
            claimName: knot-data
