k8s/knot/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: knot
  namespace: knot
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - knot.siidorow.dev
      secretName: knot-tls
  rules:
    - host: knot.siidorow.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: knot
                port:
                  number: 80
